--- a/install_demo.yml
+++ b/install_demo.yml
@@ -7,8 +7,18 @@
   tasks:
     - name: Install demo of application load balancer on AWS
       include_role:
+        name: "../roles/aws-elb"
+      when: demo == 'all' or demo == 'aws-elb'
+
+    - name: Install demo of application load balancer on AWS
+      include_role:
         name: "../roles/aws-elb-cloudformation"
       when: demo == 'all' or demo == 'aws-elb-cloudformation'
+
+    - name: Install demo of Scale set on Azure
+      include_role:
+        name: "../roles/azure-scaleset"
+      when: demo == 'all' or demo == 'azure-scaleset'
 
     - name: Install demo of Scale set on Azure
       include_role:
@@ -24,6 +34,11 @@
       include_role:
         name: "../roles/azure-satellite"
       when: demo == 'all' or demo == 'azure-satellite'
+
+    - name: Install demo of Satellite in Azure 
+      include_role:
+        name: "../roles/aws-satellite"
+      when: demo == 'all' or demo == 'aws-satellite'
 
     - name: Install demo of Satellite in Azure 
       include_role:
