--- a/roles/aws-hardening/vars/main.yml
+++ b/roles/aws-hardening/vars/main.yml
@@ -1,27 +1,27 @@
 ---
 # vars file for roles/azure-scaleset
 name: "AWS Hardening/ Deploy Environment"
-description: "Azure Hardening / Deploy Environment"
+description: "AWSHardening / Deploy Environment"
 job_type: "run"
 become_enabled: true
 playbook: "main_part_1.yml"
 create:
   name: "AWS Hardening/ Deploy Environment"
-  description: "Azure Hardening / Deploy Environment"
+  description: "AWS Hardening / Deploy Environment"
   job_type: "run"
   playbook: "main_part_1.yml"
 delete_all:
-  name: "AWS / Delete environment"
-  description: "AWS / Delete environment"
+  name: "AWS Hardening / Delete environment"
+  description: "AWS Hardening / Delete environment"
   job_type: "run"
   playbook:  "remove_rg.yml"
 inventory: 
-  name: "AWS Development environment"
-  description: "AWS Development environment"
+  name: "AWS Hardening Development environment"
+  description: "AWS Hardening Development environment"
   organization: "Default"
   source:
-    name: "AWS Development environment"
-    description: "AWS Development environment"
+    name: "AWS Hardening Development environment"
+    description: "AWS Hardening Development environment"
     source: "ec2"
     update_on_launch: true
     overwrite: true
@@ -31,15 +31,15 @@ credential_aws:
   description: "AWS credentials"
   organization: "Default"
   credential_type: "aws"
-  access_key: 
-  secret_key:
+  access_key: "{{ my_aws_access_key }}"
+  secret_key: "{{ my_aws_secret_key }}"
 credential: 
   name: "AWS Credential"
   description: "AWS machine credentials"
   organization: "Default"
   credential_type: "ssh"
   username: "ec2-user"
-  private_key:
+  private_key: "../../../{{ aws_key_name }}"
 project:
   name: "Deploy Hardened AWS Instance"
   description: "Deploy Hardened AWS Instance"
