--- a/roles/azure-cmdb/tasks/main.yml
+++ b/roles/azure-cmdb/tasks/main.yml
@@ -5,11 +5,12 @@
     name: "{{ credential_azure.name }}"
     description: "{{ credential_azure.description }}"
     organization: "{{ credential_azure.organization }}"
-    kind: "{{ credential_azure.credential_type }}"
+    credential_type: "{{ credential_azure.credential_type }}"
     subscription: "{{ credential_azure.subscription }}"
     tenant: "{{ credential_azure.tenant }}"
-    username: "{{ credential_azure.username }}"
-    password: "{{ credential_azure.password }}"
+    inputs:
+      username: "{{ credential_azure.username }}"
+      password: "{{ credential_azure.password }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
     tower_host: "{{ my_tower_host }}"
@@ -20,9 +21,10 @@
     name: "{{ credential.name }}"
     description: "{{ credential.description }}"
     organization: "{{ credential.organization }}"
-    kind: "{{ credential.credential_type }}"
+    credential_type: "{{ credential.credential_type }}"
     ssh_key_data: "{{ lookup('file', credential.private_key) }}"
-    username: "{{ credential.username }}"
+    inputs:
+      username: "{{ credential.username }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
     tower_host: "{{ my_tower_host }}"
