--- a/roles/bitbucket/tasks/main.yml
+++ b/roles/bitbucket/tasks/main.yml
@@ -5,8 +5,9 @@
     name: "{{ credential.name }}"
     description: "{{ credential.description }}"
     organization: "{{ credential.organization }}"
-    kind: "{{ credential.credential_type }}"
-    username: "{{ credential.username }}"
+    credential_type: "{{ credential.credential_type }}"
+    inputs:
+      username: "{{ credential.username }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
     tower_host: "{{ my_tower_host }}"
