Revert "Updated parameters to remove deprecation warnings"
This reverts commit 7662c5fe200fdd1f68825afb2506a107f60f6862.

--- a/roles/azure-cmdb/tasks/main.yml
+++ b/roles/azure-cmdb/tasks/main.yml
@@ -5,12 +5,11 @@
     name: "{{ credential_azure.name }}"
     description: "{{ credential_azure.description }}"
     organization: "{{ credential_azure.organization }}"
-    credential_type: "{{ credential_azure.credential_type }}"
+    kind: "{{ credential_azure.credential_type }}"
     subscription: "{{ credential_azure.subscription }}"
     tenant: "{{ credential_azure.tenant }}"
-    inputs:
-      username: "{{ credential_azure.username }}"
-      password: "{{ credential_azure.password }}"
+    username: "{{ credential_azure.username }}"
+    password: "{{ credential_azure.password }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
     tower_host: "{{ my_tower_host }}"
@@ -21,10 +20,9 @@
     name: "{{ credential.name }}"
     description: "{{ credential.description }}"
     organization: "{{ credential.organization }}"
-    credential_type: "{{ credential.credential_type }}"
+    kind: "{{ credential.credential_type }}"
     ssh_key_data: "{{ lookup('file', credential.private_key) }}"
-    inputs:
-      username: "{{ credential.username }}"
+    username: "{{ credential.username }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
     tower_host: "{{ my_tower_host }}"
