--- a/roles/aws-elb-cloudformation/tasks/main.yml
+++ b/roles/aws-elb-cloudformation/tasks/main.yml
@@ -5,10 +5,9 @@
     name: "{{ credential_aws.name }}"
     description: "{{ credential_aws.description }}"
     organization: "{{ credential_aws.organization }}"
-    credential_type: "{{ credential_aws.credential_type }}"
-    inputs:
-      username: "{{ credential_aws.access_key }}"
-      password: "{{ credential_aws.secret_key }}"
+    kind: "{{ credential_aws.credential_type }}"
+    username: "{{ credential_aws.access_key }}"
+    password: "{{ credential_aws.secret_key }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
     tower_host: "{{ my_tower_host }}"
@@ -19,9 +18,8 @@
     name: "{{ credential.name }}"
     description: "{{ credential.description }}"
     organization: "{{ credential.organization }}"
-    credential_type: "{{ credential.credential_type }}"
-    inputs:
-      username: "{{ credential.username }}"
+    kind: "{{ credential.credential_type }}"
+    username: "{{ credential.username }}"
     ssh_key_data: "{{ lookup('file', credential.private_key) }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
