--- a/roles/azure-autoscale/tasks/main.yml
+++ b/roles/azure-autoscale/tasks/main.yml
@@ -5,7 +5,7 @@
     name: "{{ credential_azure.name }}"
     description: "{{ credential_azure.description }}"
     organization: "{{ credential_azure.organization }}"
-    credential_type: "{{ credential_azure.credential_type }}"
+    kind: "{{ credential_azure.credential_type }}"
     subscription: "{{ credential_azure.subscription }}"
     tenant: "{{ credential_azure.tenant }}"
     tower_username: "{{ my_tower_username }}"
@@ -18,9 +18,8 @@
     name: "{{ credential.name }}"
     description: "{{ credential.description }}"
     organization: "{{ credential.organization }}"
-    credential_type: "{{ credential.credential_type }}"
-    inputs:
-      username: "{{ credential.username }}"
+    kind: "{{ credential.credential_type }}"
+    username: "{{ credential.username }}"
     ssh_key_data: "{{ lookup('file', credential.private_key) }}"
     tower_username: "{{ my_tower_username }}"
     tower_password: "{{ my_tower_password }}"
